@@ -1,4 +1,10 @@
-﻿shmuel 26.03.2015 09:34:26 +0200 - build 499
+﻿shmuel 27.03.2015 14:27:00 +0200 - build 500
+
+1. LuaFAR: мелкий рефакторинг.
+
+2. Уточнение 493: eval(s,0) снова исполняется в окружении вызывающего его макроса.
+
+shmuel 26.03.2015 09:34:26 +0200 - build 499
 
 1. Добавлена функция-заглушка NoCommandLine, по аналогии с функциями NoMacro, NoEvent, NoMenuItem.
 
